For a detailed Changelog, see git logs.
Here are only reported the most visible changes.

NEW in 2.5.0 (since 2.4.0)
--------------------------

* TLS protocol (with optional decryption a la ssldump)

* Reorder all TCP traffic by default


NEW in 2.4.0 (since 2.3.0)
--------------------------

* More informations are extracted from HTTP

* More robust handling of missing TCP segments


NEW in 2.3.0 (since 2.2.0)
--------------------------

* Packetogram plugin to display packet size distribution

* You can now limit the amount of RAM used by the parsers

* Duplicogram plugin to display dups time distribution

* Autodiscovery of some protocols (HTTP, SIP, MGCP, FTP...)


NEW in 2.2.0 (since 2.1.0)
--------------------------

* Faster deadlock detection

* Can replay pcap in a loop

* Can now pass nettrack values to a guile action

* More doc (in doc/)

* Support for multiline HTTP headers

* Guile files are pre-compiled before installation (see ./configure --help)


New in 2.1.0 (since 2.0.0)
--------------------------

* New simpler syntax for packet filters

* Primitive implementation of `nettrack`, a network event tracking language
  above packet filters

* Custom memory allocator that performs marginally better on large networks

* OS detection based on TCP, ripped with shame from p0f
  (http://lcamtuf.coredump.cx/p0f3/)

* Packet deduplication dynamically resize the queue (no more need for the
  autocalibration thread)


New in 2.0.0 (since 1.5.0)
--------------------------

* Continuation function replaced by hooks (with a compatibility per packet hook)

* Support for HTTP chunked transfer encoding


New in 1.5.0 (since 1.4.0)
--------------------------

* Plugins are now loaded from system library directory (usualy
  /usr/local/lib/junkie) if not found.

* Junkie can now forward traffic information to another junkie:

  junkie -p serializer.so -i eth0 &
  junkie -e '(open-deserializer)' -p some_plugin
