@@ -1,0 +1,8 @@
+AM_CFLAGS = -std=c99 -Wall -W
+AM_CPPFLAGS = -I $(top_srcdir)/include -D_GNU_SOURCE
+
+pkglib_LTLIBRARIES = nettop.la
+
+nettop_la_SOURCES = nettop.c
+nettop_la_LDFLAGS = -module -avoid-version
+
